For 1.19.9:
	- ECMAscript values when multiple scripts used same textual name reported incorrect
	  values.

	- statusbar now has name or description of mouse over sensitive node. near clipplane
	  moved to help in rendering this.

	- Should now compile on systems without Occlusion Culling in OpenGL.

	- PointLight and SpotLight were not calculated correctly in the Scenegraph.
	  Lighting revisited.

	- VIEWPOINT macro generated invalid addresses for set_bind flag operation.

	- looping through nodes between scenegraph traversals required MUTEX locking.

	- looping through nodes code was not reset properly on reload.

	- changed routing to nodes. with an eventIn the same as an internal field. (eg,
	  Extrusion set_spine and spine). Now these fields are handled before eventloop runs.

	- Javascript field initialization bug - (memory allocation problem) fixed.

	- Linux MIDI code added.

	- SpotLight - bounds checking on some parameters added.

	- OcclusionQueries code revisited so that un-rendered Shape nodes (eg, in Switch statements)
	  do not generate OpenGL errors.

	- Anchors were coded as being "sibling-sensitive" - this has been
	  changed, as they are not. This was causing problems where 2 Anchors were
	  within the same Scene Graph grouping node.

	- potential buffer overflow problem resolved in Anchor node. 
	  see:http://www.securityfocus.com/archive/1/473187

For 1.19.8:
	- Javascript was not thread-safe; should be ok now.

	- Javascript/PROTO MF*nodes also had problems with routing; fixed. (see next fix, below)

	- ROUTE bug for some MF* nodes was fixed in 1.19.7, but fix was edited out
	  from CParseParser.c; re-applied.

	- add/removeChildren routing now done before Scenegraph renders, rather than trying to
	  second guess routes in CRoutes_Register.

	- TouchSensor bug (where the javascript sphere box test would fail) fixed.

For 1.19.7:

	- Javascript MFNode work - should be ok now??
